--- a/Ciamajda/Ciamajda/Views/Account/Register.cshtml
+++ b/Ciamajda/Ciamajda/Views/Account/Register.cshtml
@@ -1,6 +1,14 @@
-﻿@model RegisterViewModel
+﻿
+@model RegisterViewModel
+
+@using PaulMiami.AspNetCore.Mvc.Recaptcha
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
 @{
     ViewData["Title"] = "Register";
+    
+
+
 }
 
 <h2>@ViewData["Title"].</h2>
@@ -30,6 +38,14 @@
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
+
+   
+    <div class="form-group">
+        
+        <recaptcha theme="RecaptchaTheme.Dark" />
+        <span class="text-danger" id="recaptchaErrorMessage"></span>
+        
+    </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <button type="submit" class="btn btn-default">Register</button>
@@ -39,4 +55,8 @@
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+<recaptcha-script validation-message-element-id="recaptchaErrorMessage" />
 }
