--- a/Ciamajda/Ciamajda/Views/_ViewImports.cshtml
+++ b/Ciamajda/Ciamajda/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using Ciamajda.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
