--- a/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-12">
 				<div class="lft_hd">
-					<a href="index.html"><img src="~/images/logo.png" alt=""/></a>
+					<p class="h2" id="logotype">Budget Planner </p>
 				</div>
 			</div>			
 			<div class="col-lg-9 col-md-9 col-sm-12">
@@ -65,7 +65,7 @@
 							</button>	
 						<div id="navbar">
 							<ul> 
-								<li><a asp-area="" asp-controller="Home" asp-action="Index" class="page-scroll">Ciamajda</a></li> 
+								<li><a asp-area="" asp-controller="Home" asp-action="Index" class="page-scroll">Home</a></li> 
 							<li><a href="#">Features do użycia <i class="fa fa-angle-down"></i></a>
 							<ul>
 								<li><a class="page-scroll"asp-controller="Home" asp-action="Features">Zajrzyj tu!</a></li>
@@ -76,7 +76,6 @@
 	
 							</ul>
 							</li> 						
-                                <li><a class="page-scroll" asp-controller="Home" asp-action="Index">Home</a></li>
                                 <li><a class="page-scroll" asp-controller="Home" asp-action="About">About</a></li>
                                 <li><a class="page-scroll" asp-controller="Home" asp-action="Contact">Contact</a></li>
 							
@@ -94,7 +93,7 @@
 </header>
 <!-- End Header Section -->
 
-<section id="blg_sec">@RenderBody()</section>
+@RenderBody()
 
 
 
@@ -163,6 +162,21 @@ $(document).ready(function(){
 });
 
 </script>
+
+    <script>
+        var onResize = function () {
+            // apply dynamic padding at the top of the body according to the fixed navbar height
+            $("body").css("padding-top", $(".navbar-fixed-top").height()+80);
+        };
+
+        // attach the function to the window resize event
+        $(window).resize(onResize);
+
+        // call it also when the page is ready after load or reload
+        $(function () {
+            onResize();
+        });
+    </script>
 <script>
 
 
