--- a/Ciamajda/Ciamajda/Views/Shared/_LoginPartial.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_LoginPartial.cshtml
@@ -6,13 +6,14 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+    <li><a asp-area="" asp-controller="Summary" asp-action="Index" title="Podsumowanie">Podsumowanie</a></li>
+    <li>
+        <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+    </li>
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-      
+     
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-            </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+                <button type="submit" id="logout-button">Log out</button>
             </li>
       
     </form>
