--- a/Ciamajda/Ciamajda/wwwroot/css/main.css
+++ b/Ciamajda/Ciamajda/wwwroot/css/main.css
@@ -95,7 +95,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.container {
+    font-size: 0;
+}
 
+.myInlineBlockElement {
+    background: tomato;
+    color: #fff;
+    display: inline-block;
+    font-size: 14px;
+}
 
 
 
