poprawienie bledu z widokiem glownym

--- a/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
@@ -92,10 +92,10 @@
     </header>
     <!-- End Header Section -->
     <div style="container">
-        <div class="lft_hd col-lg-2 col-md-2 col-sm-12" style="myInlineBlockElement">
+        <div style="myInlineBlockElement">
                 @await Html.PartialAsync("_menuPartial")
         </div>
-        <div class="col-lg-8 col-md-8 col-sm-12" style="myInlineBlockElement">
+        <div style="myInlineBlockElement">
             @RenderBody()
         </div>
     </div>
