Migracja do net core 2.0 UWAGA na konflikty!

--- a/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html class="no-js" lang="">
 <head>
     <meta charset="utf-8" />
@@ -28,8 +27,7 @@
        </environment>
         
     
-    @Html.Raw(JavaScriptSnippet.FullScript)
-	
+
  
 </head>
 <body>
