--- a/Ciamajda/Ciamajda/Views/Account/Register.cshtml
+++ b/Ciamajda/Ciamajda/Views/Account/Register.cshtml
@@ -1,55 +1,45 @@
-﻿
-@model RegisterViewModel
-
+﻿@model RegisterViewModel
 @using PaulMiami.AspNetCore.Mvc.Recaptcha
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, PaulMiami.AspNetCore.Mvc.Recaptcha
 
-<div class="container">
-
-<form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-    <h4>Create a new account.</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        </div>
-    </div>
+@{
+    ViewData["Title"] = "Register";
+}
 
 
-    <div class="form-group">
 
-        <recaptcha theme="RecaptchaTheme.Dark" />
-        <span class="text-danger" id="recaptchaErrorMessage"></span>
+<div class="row">
+    <div class="col-md-offset-3 col-md-6 col-md-offset-3">
+        <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+            <h4>Create a new account.</h4>
+            <hr />
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <recaptcha theme="RecaptchaTheme.Dark" />
+                <span class="text-danger" id="recaptchaErrorMessage"></span>
 
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+            </div>
             <button type="submit" class="btn btn-default">Register</button>
-        </div>
+        </form>
     </div>
-</form>
 </div>
 
-
 @section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    @await Html.PartialAsync("_ValidationScriptsPartial")
     <recaptcha-script validation-message-element-id="recaptchaErrorMessage" />
+
 }
