--- a/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
@@ -91,11 +91,12 @@
         </div>
     </header>
     <!-- End Header Section -->
-    <div style="container">
-        <div style="myInlineBlockElement">
+    <div style="container" >
+>
+        <div style="myInlineBlockElement" class="col-lg-2 col-md-2 col-sm-12 col-xs12 ">
                 @await Html.PartialAsync("_menuPartial")
         </div>
-        <div style="myInlineBlockElement">
+        <div style="myInlineBlockElement" class="col-lg-10 col-md-10 col-sm-12 col-xs12 ">
             @RenderBody()
         </div>
     </div>
