--- a/Ciamajda/Ciamajda/Views/Summary/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Summary/Index.cshtml
@@ -1,47 +1,18 @@
 
 
-<div class="container">
-    PODSUMOWANIE to-do zakladki na podsumwania roczne miesieczne tygodniowe
-    <section class="pull-left">
-        <ul id="menu">
-            <li>
-                <a href="#">Saldo</a>
-                <ul class="active">
-                    <li><a href="#">...</a></li>
-                    <li><a href="#">...</a></li>
-                    <li><a href="#">...</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">Rozklad srodkow</a>
-                <ul>
-                    <li><a href="#">...</a></li>
-                    <li><a href="#">...</a></li>
-                </ul>
-            </li>
-            </li>
-            <li>
-                <a href="#">Konta</a>
-                <ul>
-                    <li><a href="#">...</a></li>
-
-
-
-    </section>
-
-
+<div style="container" class="col-lg-10 col-md-10 col-sm-10 col-xs12 ">
     <!-- start progress bar Section -->
-    <section id="skill_sec" class="pull-right">
-        <div class="container">
+    <section id="skill_sec">
+        <div>
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+                <div >
                     <div class="title_sec">
                         <h1>Bilans wydatków za miesi¹c "getjakismiesiac"</h1>
 
                     </div>
                 </div>
                 <div class="skills progress-bar1">
-                    <ul class="col-md-6 col-sm-12 col-xs-12 wow fadeInLeft">
+                    <ul class="col-md-6 col-sm-12 col-xs-12 wow ">
                         <li class="progress">
                             <div class="progress-bar" data-width="85">
                                 Przychody
@@ -59,11 +30,11 @@
 
             </div>
         </div>
+        <h3>Pozostalo do wydania.. ??</h3>
+        <button>Dodaj wydatek</button>
+        <button>Dodaj przychod</button>
     </section>
     <!-- End progress bar Section -->
-    <h3>Pozostalo do wydania.. ??</h3>
-    <button>Dodaj wydatek</button>
-    <button>Dodaj przychod</button>
 </div>
 
 
