--- a/Ciamajda/Ciamajda/Views/Expense/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Expense/Index.cshtml
@@ -1,4 +1,43 @@
+@model Ciamajda.Models.ViewModels.ExpenseViewModel
 
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+    <div>
+        <a asp-action="Create">Dodaj wydatek</a>
+    </div>
+    <div class="table-responsive cart_info">
+       
+            <table class="table table-condensed">
+                <thead>
+                    <tr>
+                      <td>Tytul</td>
+                      <td>Kwota</td>
+                      <td>Waluta</td>
+                      <td>Konto</td>
+                      <td>Kategoria</td>
+                      <td>Miejsce</td>
+                      <td>Czas</td>
+                      <td>Opis</td>
+                    </tr>
+                </thead>
+                <tbody>
+                @if (ViewBag.expenselist != null)
+                {
+                    @foreach (var expense in ViewBag.expenselist)
+                    {<tr>
+                    <td>@expense.Title</td>
+                    <td>@expense.Amount</td>
+                    <td>@expense.CurrencyCurrency</td>
+                    <td>@expense.AccountId</td>
+                    <td>@expense.CategoryId</td>
+                    <td>@expense.Place</td>
+                    <td>@expense.Time</td>
+                    <td><a href="@Url.Action("Delete", "Expense", new { id = @expense.Id })"class="btn btn-primary btn-lg"><i class="fa fa-times"></i></a></td>
+                   
+                    </tr>
+
+                    }
+                }
+
+                </tbody>
+            </table>
+        </div>
+    
