--- a/Ciamajda/Ciamajda/Views/Manage/_ManageNav.cshtml
+++ b/Ciamajda/Ciamajda/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebApplication3.Views.Manage
+﻿@using Ciamajda.Views.Manage
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
