--- a/Ciamajda/Ciamajda/Views/Shared/_menuPartial.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_menuPartial.cshtml
@@ -19,8 +19,8 @@
                     }
                 </ul>
             </li>
-            <li class=""><a asp-action="">Środki</a></li>
-            <li class=""><a asp-action="">Wydatki</a></li>
+            <li class=""><a asp-controller="Income"  asp-action="Index">Dochody</a></li>
+            <li class=""><a asp-controller="Expense" asp-action="Index">Wydatki</a></li>
             <li class=""><a asp-action="">Analizy</a></li>
             <li class=""><a asp-action="">Kalkulator</a></li>
         </ul>
@@ -31,6 +31,7 @@ else
     <div class="col-lg-0 col-md-0 col-sm-0"></div>
 
 }
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 <script>
 
