--- a/Ciamajda/Ciamajda/Views/Expense/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Expense/Index.cshtml
@@ -16,6 +16,7 @@
                       <td>Miejsce</td>
                       <td>Czas</td>
                       <td>Opis</td>
+                      <td>Usun</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -26,10 +27,11 @@
                     <td>@expense.Title</td>
                     <td>@expense.Amount</td>
                     <td>@expense.CurrencyCurrency</td>
-                    <td>@expense.AccountId</td>
-                    <td>@expense.CategoryId</td>
-                    <td>@expense.Place</td>
+                    <td>@ViewBag.expenseviewmodel.GetAccountName(@expense.AccountId)</td>
+                    <td>@ViewBag.expenseviewmodel.GetCategoryName(@expense.CategoryId)</td>
+                    <td>@ViewBag.expenseviewmodel.GetPlaceName(@expense.Place)</td>
                     <td>@expense.Time</td>
+                    <td>@expense.Description</td>
                     <td><a href="@Url.Action("Delete", "Expense", new { id = @expense.Id })"class="btn btn-primary btn-lg"><i class="fa fa-times"></i></a></td>
                    
                     </tr>
