Sortowanie przychodow i wydatkow -sorttable.js

--- a/Ciamajda/Ciamajda/Views/Income/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Index.cshtml
@@ -5,7 +5,7 @@
 </div>
 <div class="table-responsive cart_info">
 
-    <table class="table table-condensed">
+    <table class="table table-condensed sortable">
         <thead>
             <tr>
                 <td>Tytul</td>
