--- a/Ciamajda/Ciamajda/Views/Income/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Index.cshtml
@@ -1,5 +1,18 @@
 ﻿@model Ciamajda.Models.ViewModels.IncomeViewModel
+<style type="text/css">
 
+    table.sortable thead:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after {
+        content: " \25B4\25BE"
+    }
+
+    table.sortable tbody tr:nth-child(2n) td {
+        background: #fff
+    }
+
+    table.sortable tbody tr:nth-child(2n+1) td {
+        background: #e6faff;
+    }
+</style>
 <div>
     <a asp-action="Create">Dodaj dochod</a>
 </div>
