--- a/Ciamajda/Ciamajda/Views/Expense/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/Expense/Create.cshtml
@@ -50,7 +50,7 @@
         </tr>
         <tr>
             <td>@Html.LabelFor(model => model.Expense.CategoryId) </td>
-            <td>@Html.DropDownListFor(model => model.Expense.CategoryId, new SelectList(ViewBag.categoryExpenselist, "Value", "Text")) </td>
+            <td>@Html.DropDownListFor(model => model.Expense.CategoryId, new SelectList(ViewBag.categorylist, "Value", "Text")) </td>
         </tr>
         <tr>
             <td>@Html.LabelFor(model => model.Expense.Place) </td>
