--- a/Ciamajda/Ciamajda/Views/Income/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Create.cshtml
@@ -50,7 +50,7 @@
             </tr>
             <tr>
                 <td>@Html.LabelFor(model => model.Income.CategoryId) </td>
-                <td>@Html.DropDownListFor(model => model.Income.CategoryId, new SelectList(ViewBag.categoryIncomelist, "Value", "Text")) </td>
+                <td>@Html.DropDownListFor(model => model.Income.CategoryId, new SelectList(ViewBag.categorylist, "Value", "Text")) </td>
             </tr>
           
             <tr>
