--- a/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
         <link rel="stylesheet" href="~/css/jquery-ui.min.css"/>
         <link rel="stylesheet" href="~/css/jquery-ui.structure.min.css" />
         <link rel="stylesheet" href="~/css/jquery-ui.theme.min.css" />
+        <link rel="stylesheet" href="~/css/timeline.css"/>
     </environment>
 
     
@@ -237,6 +238,8 @@
                 regional:"pl"
             });
         });
+
+
     </script>
 
    
