--- a/Ciamajda/Ciamajda/Views/Manage/EnableAuthenticator.cshtml
+++ b/Ciamajda/Ciamajda/Views/Manage/EnableAuthenticator.cshtml
@@ -1,4 +1,5 @@
 ﻿@model EnableAuthenticatorViewModel
+@using Ciamajda.Views.Manage
 @{
     ViewData["Title"] = "Enable authenticator";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
