--- a/Ciamajda/Ciamajda/Views/Manage/ExternalLogins.cshtml
+++ b/Ciamajda/Ciamajda/Views/Manage/ExternalLogins.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ExternalLoginsViewModel
+@using Ciamajda.Views.Manage
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData.AddActivePage(ManageNavPages.ExternalLogins);
