--- a/Ciamajda/Ciamajda/Views/Manage/GenerateRecoveryCodes.cshtml
+++ b/Ciamajda/Ciamajda/Views/Manage/GenerateRecoveryCodes.cshtml
@@ -1,4 +1,5 @@
 ﻿@model GenerateRecoveryCodesViewModel
+@using Ciamajda.Views.Manage
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
