Poprawka błędów, wstep do zmiany frontu portfela

--- a/Ciamajda/Ciamajda/Views/Income/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Create.cshtml
@@ -7,7 +7,7 @@
 
 
 }
-<h2>Dodaj dochod</h2>
+<h2>Dodaj przychod</h2>
 <div align="center">
     @using (Html.BeginForm("create", "Income", FormMethod.Post))
     {
