--- a/Ciamajda/Ciamajda/Views/OurAccount/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/OurAccount/Create.cshtml
@@ -15,6 +15,10 @@
                 <td> @Html.LabelFor(model => model.Type) </td>
                 <td>@Html.TextBoxFor(model => model.Type) </td>
             </tr>
+            <tr>
+                <td> @Html.LabelFor(model => model.Number) </td>
+                <td>@Html.TextBoxFor(model => model.Number) </td>
+            </tr>
                     @Html.EditorFor(model => model.CreationDate)
                     @Html.EditorFor(model => model.DiscardDate)
                     @Html.EditorFor(model => model.UserId)
