Zmiana widoku portfela -> katelki do kont. Widok szczegółowy kont.

--- a/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_Layout.cshtml
@@ -87,10 +87,10 @@
     <!-- End Header Section -->
     <div class="container" >
 >
-        <div class="myInlineBlockElement col-md-2 col-sm-12 col-xs12 ">
+        <div class="myInlineBlockElement col-md-2 col-lg-2 col-sm-12 col-xs12 ">
                 @await Html.PartialAsync("_menuPartial")
         </div>
-        <div class="myInlineBlockElement col-md-10 col-sm-12 col-xs12 ">
+        <div class="myInlineBlockElement col-md-10 col-lg-10 col-sm-12 col-xs12 ">
             @RenderBody()
         </div>
     </div>
