--- a/Ciamajda/Ciamajda/Views/Home/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Home/Index.cshtml
@@ -3,10 +3,9 @@
 }
 
 
-<section id="abt_sec">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+            <div class="align-self-center col-lg-8 col-md-8 col-sm-8 col-xs-8 ">
                 <div class="title_sec">
                     <h1>Projekt ZPI 2017</h1>
                     <h2>Trwa Sprint nr4</h2>
@@ -15,4 +14,3 @@
                 </div>
         </div>
     </div>
-</section>
