--- a/Ciamajda/Ciamajda/Views/OurAccount/Details.cshtml
+++ b/Ciamajda/Ciamajda/Views/OurAccount/Details.cshtml
@@ -1,100 +1,53 @@
-﻿@model Ciamajda.Models.ViewModels.AccountViewModel
+﻿@model Ciamajda.Models.ViewModels.FlowViewModel
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+
 
 <div>
     <h4>Szczegóły konta</h4>
     <hr />
+    <div class="timeline">
+        <ul class="days">
+            @foreach (var el in ViewBag.list)
+            {
+                <li class="day">
+                    <div class="events">
 
-    <section id="cd-timeline" class="cd-container">
-        <div class="cd-timeline-block">
-            <div class="cd-timeline-img cd-picture">
-            </div>
+                       
+                        <p>@el.Title</p>
+                        
+                       
+                        @if (el is Expense)
+                {
+                            <p style="color:red">-@el.Amount@el.CurrencyCurrency</p>
+                            <p><a href="@Url.Action("Details", "Expense", new { id = @el.Id })">Szczegoly</a></p>
+                        }
+                        else
+                        {
+                            <p style="color:green">+@el.Amount@el.CurrencyCurrency</p>
+                            <p><a href="@Url.Action("Details", "Income", new { id = @el.Id })">Szczegoly</a></p>
 
-            <div class="cd-timeline-content">
-                <h2>Penta Consulting</h2>
-                <div class="timeline-content-info">
-                    <span class="timeline-content-info-title">
-                        <i class="fa fa-certificate" aria-hidden="true"></i>
-                        Front End Developer
-                    </span>
-                    <span class="timeline-content-info-date">
-                        <i class="fa fa-calendar-o" aria-hidden="true"></i>
-                        June 2016 - Present
-                    </span>
-                </div>
-                <p>Working alongside the designer team implementing the designs, also developing custom solutions to address team necessities.</p>
-                <ul class="content-skills">
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>JavaScript</li>
-                    <li>jQuery</li>
-                    <li>Wordpress</li>
-                </ul>
-            </div> <!-- cd-timeline-content -->
-        </div> <!-- cd-timeline-block -->
+                        }
 
-        <div class="cd-timeline-block">
-            <div class="cd-timeline-img cd-movie">
-            </div> <!-- cd-timeline-img -->
+                        <div class="date">@el.Time.ToString("dd MMMM, yyyy")
+                        </div>
+                    </div>
+                </li>
 
-            <div class="cd-timeline-content">
-                <h2>Title of section 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-                <span class="cd-date">Jan 18</span>
-            </div> <!-- cd-timeline-content -->
-        </div> <!-- cd-timeline-block -->
 
-        <div class="cd-timeline-block">
-            <div class="cd-timeline-img cd-picture">
-            </div> <!-- cd-timeline-img -->
+            }
+        </ul>
+    </div>
 
-            <div class="cd-timeline-content">
-                <h2>Title of section 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-                <span class="cd-date">Jan 24</span>
-            </div> <!-- cd-timeline-content -->
-        </div> <!-- cd-timeline-block -->
 
-        <div class="cd-timeline-block">
-            <div class="cd-timeline-img cd-location">
-            </div> <!-- cd-timeline-img -->
 
-            <div class="cd-timeline-content">
-                <h2>Title of section 4</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-                <span class="cd-date">Feb 14</span>
-            </div> <!-- cd-timeline-content -->
-        </div> <!-- cd-timeline-block -->
 
-        <div class="cd-timeline-block">
-            <div class="cd-timeline-img cd-location">
-            </div>
-
-            <div class="cd-timeline-content">
-                <h2>Title of section 5</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-                <span class="cd-date">Feb 18</span>
-            </div> <!-- cd-timeline-content -->
-        </div> <!-- cd-timeline-block -->
-
-        <div class="cd-timeline-block">
-            <div class="cd-timeline-img cd-movie">
-            </div> <!-- cd-timeline-img -->
-
-            <div class="cd-timeline-content">
-                <h2>Final Section</h2>
-                <p>This is the content of the last section</p>
-                <span class="cd-date">Feb 26</span>
-            </div> <!-- cd-timeline-content -->
-        </div> <!-- cd-timeline-block -->
-    </section> <!-- cd-timeline -->
    
+
 </div>
 <div>
-   <a asp-controller="Home" asp-action="Index">HomePage</a>
+    <a asp-controller="Home" asp-action="Index">HomePage</a>
 </div>
