--- a/Ciamajda/Ciamajda/wwwroot/css/timeline.css
+++ b/Ciamajda/Ciamajda/wwwroot/css/timeline.css
@@ -1,273 +1,147 @@
-﻿html, body {
-    height: 100%;
-    font-family: 'Open Sans', sans-serif;
-   
-}
-
-.cd-container {
+﻿/* apply a natural box layout model to all elements, but allowing components to change */
+html {
     box-sizing: border-box;
-    background-color: #222C32;
-    width: 90%;
-    max-width: 1080px;
-    margin: 0 auto;
-    background: #2B343A;
-    padding: 0 10%;
-    border-radius: 2px;
+    font-family: georgia;
 }
 
-    .cd-container::after {
-        content: '';
-        display: table;
-        clear: both;
-    }
-
-/* -------------------------------- 
-
-Main components 
-
--------------------------------- */
-#cd-timeline {
-    position: relative;
-    padding: 2em 0;
-    margin-top: 2em;
-    margin-bottom: 2em;
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
-    #cd-timeline::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 25px;
-        height: 100%;
-        width: 4px;
-        background: #7E57C2;
-    }
-
-@media only screen and (min-width: 1170px) {
-    #cd-timeline {
-        margin-top: 3em;
-        margin-bottom: 3em;
-    }
-
-        #cd-timeline::before {
-            left: 50%;
-            margin-left: -2px;
-        }
+img {
+    max-width: 100%;
 }
 
-.cd-timeline-block {
-    position: relative;
-    margin: 2em 0;
+.timeline {
+    text-align: center;
 }
 
-    .cd-timeline-block:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-
-    .cd-timeline-block:first-child {
-        margin-top: 0;
-    }
-
-    .cd-timeline-block:last-child {
-        margin-bottom: 0;
-    }
-
-@media only screen and (min-width: 1170px) {
-    .cd-timeline-block {
-        margin: 4em 0;
-    }
-
-        .cd-timeline-block:first-child {
-            margin-top: 0;
-        }
-
-        .cd-timeline-block:last-child {
-            margin-bottom: 0;
-        }
-}
-
-.cd-timeline-img {
-    position: absolute;
-    top: 8px;
-    left: 12px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    box-shadow: 0 0 0 4px #7E57C2, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
-}
-
-.cd-timeline-img {
-    background: #673AB7;
-}
-
-@media only screen and (min-width: 1170px) {
-    .cd-timeline-img {
-        width: 30px;
-        height: 30px;
-        left: 50%;
-        margin-left: -15px;
-        margin-top: 15px;
-        /* Force Hardware Acceleration in WebKit */
-        -webkit-transform: translateZ(0);
-        -webkit-backface-visibility: hidden;
-    }
-}
-
-.cd-timeline-content {
-    position: relative;
-    margin-left: 60px;
-    margin-right: 30px;
-    background: #333C42;
-    border-radius: 2px;
-    padding: 1em;
-}
-
-    .cd-timeline-content .timeline-content-info {
-        background: #2B343A;
-        padding: 5px 10px;
-        color: rgba(255, 255, 255, 0.7);
-        font-size: 12px;
-        box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.08);
-        border-radius: 2px;
-    }
-
-        .cd-timeline-content .timeline-content-info i {
-            margin-right: 5px;
-        }
-
-        .cd-timeline-content .timeline-content-info .timeline-content-info-title, .cd-timeline-content .timeline-content-info .timeline-content-info-date {
-            width: calc(50% - 2px);
-            display: inline-block;
-        }
-
-@media (max-width: 500px) {
-    .cd-timeline-content .timeline-content-info .timeline-content-info-title, .cd-timeline-content .timeline-content-info .timeline-content-info-date {
-        display: block;
-        width: 100%;
-    }
-}
-
-.cd-timeline-content .content-skills {
-    font-size: 12px;
-    padding: 0;
-    margin-bottom: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-    .cd-timeline-content .content-skills li {
-        background: #40484D;
-        border-radius: 2px;
+    .timeline .year {
         display: inline-block;
-        padding: 2px 10px;
-        color: rgba(255, 255, 255, 0.7);
-        margin: 3px 2px;
-        text-align: center;
-        flex-grow: 1;
+        font-size: 36px;
+        font-weight: bold;
+        position: relative;
     }
 
-.cd-timeline-content:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.cd-timeline-content h2 {
-    color: rgba(255, 255, 255, 0.9);
-    margin-top: 0;
-    margin-bottom: 5px;
-}
-
-.cd-timeline-content p, .cd-timeline-content .cd-date {
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 13px;
-    font-size: 0.8125rem;
-}
-
-.cd-timeline-content .cd-date {
-    display: inline-block;
-}
-
-.cd-timeline-content p {
-    margin: 1em 0;
-    line-height: 1.6;
-}
-
-.cd-timeline-content::before {
-    content: '';
-    position: absolute;
-    top: 16px;
-    right: 100%;
-    height: 0;
-    width: 0;
-    border: 7px solid transparent;
-    border-right: 7px solid #333C42;
-}
-
-@media only screen and (min-width: 768px) {
-    .cd-timeline-content h2 {
-        font-size: 20px;
-        font-size: 1.25rem;
-    }
-
-    .cd-timeline-content p {
-        font-size: 16px;
-        font-size: 1rem;
-    }
-
-    .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
-        font-size: 14px;
-        font-size: 0.875rem;
-    }
-}
-
-@media only screen and (min-width: 1170px) {
-    .cd-timeline-content {
-        color: white;
-        margin-left: 0;
-        padding: 1.6em;
-        width: 36%;
-        margin: 0 5%;
-    }
-
-        .cd-timeline-content::before {
-            top: 24px;
-            left: 100%;
-            border-color: transparent;
-            border-left-color: #333C42;
+        .timeline .year span {
+            display: inline-block;
+            padding-bottom: 6px;
         }
 
-        .cd-timeline-content .cd-date {
-            position: absolute;
+        .timeline .year:after {
+            content: "";
+            display: block;
+            width: 80%;
+            margin: auto;
+            height: 1px;
+            background: green;
+        }
+
+    .timeline .year--end:before {
+        content: "";
+        display: block;
+        width: 80%;
+        margin: auto;
+        height: 1px;
+        background: green;
+    }
+
+    .timeline .year--end:after {
+        content: none;
+    }
+
+    .timeline .days {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+
+        .timeline .days .day {
             width: 100%;
-            left: 122%;
-            top: 6px;
-            font-size: 16px;
-            font-size: 1rem;
+            float: left;
         }
 
-    .cd-timeline-block:nth-child(even) .cd-timeline-content {
-        float: right;
-    }
+            .timeline .days .day .events {
+                position: relative;
+                float: left;
+                border-right: 1px solid green;
+                padding: 30px;
+                text-align: right;
+                width: 50%;
+            }
 
-        .cd-timeline-block:nth-child(even) .cd-timeline-content::before {
-            top: 24px;
-            left: auto;
-            right: 100%;
-            border-color: transparent;
-            border-right-color: #333C42;
-        }
+                .timeline .days .day .events:after {
+                    content: "";
+                    width: 40%;
+                    display: inline-block;
+                    height: 1px;
+                    background: green;
+                    position: absolute;
+                    right: 0;
+                }
 
-        .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
-            float: right;
-        }
+                .timeline .days .day .events .date {
+                    position: absolute;
+                    top: 50%;
+                    left: 100%;
+                    transform: translateY(-50%);
+                    padding: 30px;
+                    text-align: left;
+                    color: green;
+                    font-size: 24px;
+                    white-space: nowrap;
+                }
 
-        .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-date {
-            left: auto;
-            right: 122%;
-            text-align: right;
-        }
-}
+                .timeline .days .day .events .day__img {
+                    margin-right: -30px;
+                    position: relative;
+                    overflow: hidden;
+                }
+
+                    .timeline .days .day .events .day__img img {
+                        display: block;
+                        float: right;
+                    }
+
+                    .timeline .days .day .events .day__img .caption {
+                        position: absolute;
+                        margin: 0;
+                        bottom: 0;
+                        right: 0;
+                        padding: 20px;
+                        background: rgba(0, 0, 0, 0.7);
+                        color: #fff;
+                    }
+
+            .timeline .days .day:nth-child(odd) .events {
+                width: calc(50% + 1px);
+                float: right;
+                border-right: 0;
+                border-left: 1px solid green;
+                text-align: left;
+            }
+
+                .timeline .days .day:nth-child(odd) .events:after {
+                    right: auto;
+                    left: 0;
+                }
+
+                .timeline .days .day:nth-child(odd) .events .date {
+                    left: auto;
+                    right: 100%;
+                    text-align: right;
+                }
+
+                .timeline .days .day:nth-child(odd) .events .day__img {
+                    margin-right: auto;
+                    margin-left: -30px;
+                }
+
+                    .timeline .days .day:nth-child(odd) .events .day__img img {
+                        float: left;
+                    }
+
+                    .timeline .days .day:nth-child(odd) .events .day__img .caption {
+                        right: auto;
+                        left: 0;
+                    }
